--- a/index.html
+++ b/index.html
@@ -2,84 +2,56 @@
 <html lang="en">
 
 <head>
-    <link href="Lambda-pre-css.css" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to my world.</title>
-
+    <meta name="viewport" content='width=device-width, initial-scale=1' name='viewport' />
+    <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@1,700&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=El+Messiri&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <title>Main Page</title>
 </head>
 
 <body>
-    <div class="btn-group">
-        <button onclick="window.location.href='https://www.GitHub.com/wiscowhaaat';">Check out my GitHub</button>
-        <button onclick="window.location.href='https://www.linkedin.com/in/JohnBarnesJFB';">Let's connect on
-            LinkedIn</button>
+    <div class="mainContent">
     </div>
-
-    <div class="header">
-        <h1>Welcome, and <span><a target="_blank"
-                    href="https://en.wikipedia.org/wiki/%22Hello,_World!%22_program#History"
-                    style="color:mediumblue">helloWorld!</span></a></h1>
-        <h3>I am Johnathan Barnes</h3>
-        <h4>Appleton, Wisconsin</h4>
-    </div>
-
-    <div>
-        <img src="ME.jpeg">
-    </div>
-
-    <!-- <div id="github">
-    <a href="https://wwww.github.com/wiscowhaaat">Check out my GitHub</a>
-</div> -->
-    <div class="main">
-        <div class="early">
-            <p> Growing up in the Chicagoland area had it's ups and downs.</p>
-            <p> Living in the midwest usually meant spending ample time on the internet.</p>
-            <p> This led to being exposed to the dot com era.</p>
-            <p> Even though I was on the internet a lot, I never really took much time to learn much else.</p>
-            <p> Until the day I decided to install a linux distro when I was 15. </p>
-        </div>
-
-        <div class="later">
-            <h1> I've been interested in programming and software development since. </h1>
-            <p> I turn 30 this year. That means 15 years of being "interested"</p>
-            <h3> Enough is enough!</h3>
-            <p> My cousin recommended Lambda School after I expressed interest in javascript.</p>
-            <p> I began teaching myself but quickly found that I would lose interest and move on to other hobbies</p>
-        </div>
-
-        <div class="allIn">
-            <h2> I'm finally going all in and I couldn't be more excited to begin this journey.</h2>
-            <p> Being mentored by two cousins that work in software development and computer science, I've found that
-                it's a
-                large hurdle.</p>
-            <p> It is becoming easier to grasp, and the fundamentals are [almost] making sense. </p>
-            <p> I've been told time after time: it takes time.</p>
-        </div>
-
-        <div class="shortList">
-            <h3>A few of my <span style="color:mediumblue">short</span> term goals > 5 years.</h3>
-            <ul style="list-style: square;">
-                <li>Master web development fundamentals.</li>
-                <li>Become a junior developer.</li>
-                <li>Become more physically active.</li>
-                <li>Build a computer.</li>
-                <li>Develop a useful and stylish application.</li>
-            </ul>
-
-            <h3> A few of my <span style="color:mediumblue">long</span> term goals < 5+ years.</h3>
-                    <ul style="list-style: square">
-                        <li>Start a family.</li>
-                        <li>Advance my career as a senior developer.</li>
-                        <li>Move to Chicago.</li>
-                        <li>Buy a house.</li>
-                        <li>Start a company.</li>
-                    </ul>
+    <div class="buttonBackground">
+        <div>
+            <button onclick="window.location.href='projects.html';" id="buttonProjects">Projects</button>
+            |
+            <button onclick="window.location.href='about.html';" id="buttonAbout">About</button>
+            |
+            <button onclick="window.location.href='contact.html';" id="buttonContact">Contact</button>
         </div>
     </div>
-    <script src="Lambda-pre-js.js"></script>
+
+    <div class="flexContent">
+        <div class="leftFlexChild">
+            <img id="dogLeft"
+                src="https://i.picsum.photos/id/1025/4951/3301.jpg?hmac=_aGh5AtoOChip_iaMo8ZvvytfEojcgqbCH7dzaz-H8Y">
+
+            <img id="dogRight"
+                src="https://images.unsplash.com/photo-1586326709898-0a344840a314?ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80">
+        </div>
+        <div class="flexText">
+            <div class="rightFlexChild">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod <br>
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad <br>
+                    minim veniam, quis nostrud exercitation ullamco laboris nisi ut<br>
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit <br>
+                    in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <br>
+                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia<br>
+                    deserunt mollit anim id est laborum.</p>
+                <button onclick="window.location.href='contact.html';" id="buttonContactBottom">
+                    Contact Me</button>
+            </div>
+        </div>
+    </div>
+
+    <img id="bottomPhoto"
+        src="https://scontent-ort2-2.xx.fbcdn.net/v/t31.0-8/12466192_203617203316457_7565825682990994373_o.jpg?_nc_cat=100&_nc_sid=e007fa&_nc_ohc=5mGEjibCuFgAX-Xgky8&_nc_ht=scontent-ort2-2.xx&oh=33196ca41279a5d20ad81b55542749b3&oe=5F358457">
+    </div>
 </body>
 
 </html>
-
-<button class="button" onclick="doThisThing()"> <span> Click the button. </span></>
